[package]
name = "ror2-eclipse-tracker-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "*"
poise = "*"
shuttle-runtime = "*"
shuttle-shared-db = { version = "*", features = ["postgres", "sqlx"] }
sqlx = { version = "*", features = ["postgres", "runtime-tokio-native-tls"] }
shuttle-serenity = "*"
tracing = "*"
tokio = "*"
